# trait_test

./: Cargo.toml
src/: db_user.rs  main.rs  user_dtos.rs
